Bug 852804 - a11y::SelectionManager shouldn't hold a strong ref to focused element, r=tbsaunde