accessible/src/base/SelectionManager.h
@@ -7,6 +7,7 @@
 #define mozilla_a11y_SelectionManager_h__
 
 #include "nsAutoPtr.h"
+#include "nsIFrame.h"
 #include "nsISelectionListener.h"
 
 class nsIContent;
@@ -101,7 +102,7 @@ protected:
 
 private:
   // Currently focused control.
-  nsCOMPtr<nsIContent> mCurrentControl;
+  nsWeakFrame mCurrCtrlFrame;
 
   // Info for the the last selection event.
   // If it was on a control, then its control's selection. Otherwise, it's for
